--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
 <body>
     <header>
+        <!-- <h1 class="one" onclick="print()">Meu Blog</h1> Este está chamando a função print do JS -->
         <h1 class="one">Meu Blog</h1>
+        <input type="text">
     </header>
     
     <!-- <h1 class="one">Meu Blog</h1> -->
